soil quality updated

--- a/app/src/main/res/layout/activity_home_dashboard.xml
+++ b/app/src/main/res/layout/activity_home_dashboard.xml
@@ -355,9 +355,12 @@
 
         <!-- Fourth Item - Reports -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/soilQualityCard"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            android:clickable="true"
+            android:focusable="true"
             app:cardCornerRadius="12dp"
             app:cardElevation="6dp"
             app:layout_columnWeight="1"
