--- a/app/src/main/res/layout/activity_home_dashboard.xml
+++ b/app/src/main/res/layout/activity_home_dashboard.xml
@@ -250,6 +250,7 @@
         <!-- First Item - Appointments -->
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
+            android:id="@+id/schemes_home"
             android:layout_height="140dp"
             android:layout_margin="8dp"
             app:cardCornerRadius="12dp"
